ARROW-6006: [C++] Do not fail to read empty IPC stream with schema having dictionary types

Closes #4947 from wesm/ARROW-6006 and squashes the following commits:

e8d54aa58 <Wes McKinney> Fix typo
b442390c3 <Wes McKinney> Do not fail to read empty stream with schema having dictionary types

Authored-by: Wes McKinney <wesm+git@apache.org>
Signed-off-by: Wes McKinney <wesm+git@apache.org>